1. 功能。增加模块module_card_girl, 卡片形式显示美女

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,9 +18,10 @@ org.gradle.jvmargs=-Xmx2048m
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
-# Õâ¸öÖµÒ»°ã¸úÄãµÄAndroidStudio°æ±¾ºÅÒ»ÖÂ
+# ï¿½ï¿½ï¿½ÖµÒ»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½AndroidStudioï¿½æ±¾ï¿½ï¿½Ò»ï¿½ï¿½
 localGradlePluginVersion=3.0.1
 
-# Ã¿´Î¸ü¸Ä¡°isModule¡±µÄÖµºó£¬ĞèÒªµã»÷ "Sync Project" °´Å¥
-# isModuleÊÇ¡°¼¯³É¿ª·¢Ä£Ê½¡±ºÍ¡°×é¼ş¿ª·¢Ä£Ê½¡±µÄÇĞ»»¿ª¹Ø
-isModule=false
+# Ã¿ï¿½Î¸ï¿½ï¿½Ä¡ï¿½isModuleï¿½ï¿½ï¿½ï¿½Öµï¿½ï¿½ï¿½ï¿½Òªï¿½ï¿½ï¿½ "Sync Project" ï¿½ï¿½Å¥
+# isModuleï¿½Ç¡ï¿½ï¿½ï¿½ï¿½É¿ï¿½ï¿½ï¿½Ä£Ê½ï¿½ï¿½ï¿½Í¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä£Ê½ï¿½ï¿½ï¿½ï¿½ï¿½Ğ»ï¿½ï¿½ï¿½ï¿½ï¿½
+# ç½®ä¸ºtrue,åˆ™å¯ç›´æ¥è¿è¡Œ module_newã€ module_girl ç­‰ module
+isModule=true
