--- a/module_main/build.gradle
+++ b/module_main/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     annotationProcessor deps.arouter_compiler
     implementation project(':lib_common')
+    implementation project(':module_sample')
 }
