--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':lib_common',
+include ':lib_common', ':module_sample', ':module_card_girl',
         ':module_app',
         ':module_main',
         ':module_girls',
