--- a/versions.gradle
+++ b/versions.gradle
@@ -108,7 +108,11 @@ build_versions.target_sdk = 27
 build_versions.build_tools = "27.0.2"
 ext.build_versions = build_versions
 
-
+/**
+ * builder.gradle 文件 addRepos(repositories)
+ * @param handler
+ * @return
+ */
 def addRepos(RepositoryHandler handler) {
     handler.google()
     handler.jcenter()
