1. 功能。删除 sample 模块，build 的时候报错了 2. 功能。完成module_main 路由跳转 妹子卡片模块 3. 功能。实现命令行 clean build 打包，并添加 build-> doLast 命令，执行拷贝 release 包到指定目录并重命名的功能

--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-storePassword=guiying712
-keyPassword=guiying712
-keyAlias=guiying712
-storeFile=/mykey.jks
+storePassword=123456
+keyPassword=123456
+keyAlias=keyAlias
+storeFile=mykey.jks
