--- a/module_card_girl/build.gradle
+++ b/module_card_girl/build.gradle
@@ -44,12 +44,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     annotationProcessor deps.arouter_compiler
     implementation project(':lib_common')
+    // addition
+//    compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.makeramen:roundedimageview:2.2.1'
+//    compile 'com.android.support:cardview-v7:23.2.1'
 
     implementation 'com.github.zhuchen1109:Swipe-cards:18df0b545b'
 }
