--- a/module_card_girl/src/main/module/AndroidManifest.xml
+++ b/module_card_girl/src/main/module/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hc.module.cardgirl">
+    package="com.guiying.module.cardgirl">
 
     <application
         android:name="debug.CardGirlApplication"
