--- a/module_app/build.gradle
+++ b/module_app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 // add pmd
-apply plugin: 'pmd'
-apply plugin: 'jacoco'
+//apply plugin: 'pmd'
+//apply plugin: 'jacoco'
 
 
 // Create a variable called keystorePropertiesFile, and initialize it to your
@@ -160,15 +160,39 @@ def copyToPath(file, path) {
 // =========== pmd 分析
 // =============================
 
-def configDir = "${project.rootDir}/config"
-def reportDir = "${project.buildDir}/reports"
-check.dependsOn 'pmd' // 将pmd 和 check任务关联起来，调用原来的check 就好调用我们的 pmd
-task pmd(type:Pmd, dependsOn:"assembleDebug") {
+//def configDir = "${project.rootDir}/config"
+//def reportDir = "${project.buildDir}/reports"
+//check.dependsOn 'pmd' // 将pmd 和 check任务关联起来，调用原来的check 就好调用我们的 pmd
+//task pmd(type:Pmd, dependsOn:"assembleDebug") {
 //    group = "pmd"
 //    ignoreFailures = false
-//    ruleSetFiles = files("$configDir/pmd/ali-pmd.xml")
-//    ruleSets = []
-//    source 'src/main/java'
+//    consoleOutput = true
+////    ruleSetFiles = files("$configDir/pmd/ali-pmd.xml")
+//    ruleSets = [
+//            'java-android','java-basic','java-braces',
+//            'java-clone','java-codesize',
+//            'java-comments',
+//            'java-controversial',
+//            'java-coupling',
+//            'java-design',
+//            'java-empty',
+//            'java-finalizers',
+//            'java-imports',
+//            'java-j2ee',
+//            'java-javabeans',
+//            'java-junit',
+//            'java-logging-jakarta-commons',
+//            'java-logging-java',
+//            'java-migrating',
+//            'java-naming',
+//            'java-optimizations',
+//            'java-strictexception','java-strings',
+//            'java-sunsecure','java-typeresolution',
+//            'java-unnecessary','java-unusedcode'
+//
+//    ]
+////    source 'src/main/java'
+//    source = fileTree('src')
 //    include '**/*.java'
 //    exclude '**/gen/**'
 //    reports {
@@ -181,81 +205,39 @@ task pmd(type:Pmd, dependsOn:"assembleDebug") {
 //            destination "$reportsDir/pmd/pmd.html"
 //        }
 //    }
-
-    group = "pmd"
-    ignoreFailures = false
-    consoleOutput = true
-//    ruleSetFiles = files("$configDir/pmd/ali-pmd.xml")
-    ruleSets = [
-            'java-android','java-basic','java-braces',
-            'java-clone','java-codesize',
-            'java-comments',
-            'java-controversial',
-            'java-coupling',
-            'java-design',
-            'java-empty',
-            'java-finalizers',
-            'java-imports',
-            'java-j2ee',
-            'java-javabeans',
-            'java-junit',
-            'java-logging-jakarta-commons',
-            'java-logging-java',
-            'java-migrating',
-            'java-naming',
-            'java-optimizations',
-            'java-strictexception','java-strings',
-            'java-sunsecure','java-typeresolution',
-            'java-unnecessary','java-unusedcode'
-
-    ]
-//    source 'src/main/java'
-    source = fileTree('src')
-    include '**/*.java'
-    exclude '**/gen/**'
-    reports {
-        xml.enabled = true
-        html.enabled = true
-        xml {
-            destination "$reportsDir/pmd/pmd.xml"
-        }
-        html {
-            destination "$reportsDir/pmd/pmd.html"
-        }
-    }
-}
+//}
 
 // =============================
 // =========== Jacoco 代码覆盖率 分析
 // =============================
 
 
-jacoco {
-    toolVersion = "0.7.5.201505241946"
-}
-task coverage(type: JacocoReport, dependsOn: "testDebugUnitTest") {
-    group = "Reporting"
-    description = "Generate Jacoco coverage reports after running tests."
-    reports {
-        xml.enabled = true
-        html.enabled = true
-        html.destination "${buildDir}/reports/codecoverage"
-    }
-    def ignoredFilter = [
-            '**/R.class',
-            '**/R$*.class',
-            '**/BuildConfig.*',
-            '**/Manifest*.*',
-            'android/**/*.*',
-            'com.android/**/*.*',
-            'com.google/**/*.*'
-    ]
-    def debugTree = fileTree(dir:"${project.buildDir}/intermediates/classes/debug", excludes: ignoredFilter)
-    sourceDirectories = files(android.sourceSets.main.java.srcDirs)
-    classDirectories = files([debugTree])
-    additionalSourceDirs = files([
-            "${buildDir}/generated/source/buildConfig/debug",
-            "${buildDir}/generated/source/r/debug"
-    ])
-    executionData = fileTree(dir: project.projectDir, includes: ['**/*.exec', '**/*.ec'])
-}
+//jacoco {
+//    toolVersion = "0.7.5.201505241946"
+//}
+//task coverage(type: JacocoReport, dependsOn: "testDebugUnitTest") {
+//    group = "Reporting"
+//    description = "Generate Jacoco coverage reports after running tests."
+//    reports {
+//        xml.enabled = true
+//        html.enabled = true
+//        html.destination "${buildDir}/reports/codecoverage"
+//    }
+//    def ignoredFilter = [
+//            '**/R.class',
+//            '**/R$*.class',
+//            '**/BuildConfig.*',
+//            '**/Manifest*.*',
+//            'android/**/*.*',
+//            'com.android/**/*.*',
+//            'com.google/**/*.*'
+//    ]
+//    def debugTree = fileTree(dir:"${project.buildDir}/intermediates/classes/debug", excludes: ignoredFilter)
+//    sourceDirectories = files(android.sourceSets.main.java.srcDirs)
+//    classDirectories = files([debugTree])
+//    additionalSourceDirs = files([
+//            "${buildDir}/generated/source/buildConfig/debug",
+//            "${buildDir}/generated/source/r/debug"
+//    ])
+//    executionData = fileTree(dir: project.projectDir, includes: ['**/*.exec', '**/*.ec'])
+//}
