sonar.host.url ： localhost -> 172.17.0.4

--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ subprojects{
         properties{
             property "sonar.sources", "src/main/java"
             //可保持在 ~/.gradle/gradle.properties
-            property "sonar.host.url", "http://localhost:9000/"
+            property "sonar.host.url", "172.17.0.4:9000"
             property "sonar.login", "admin"
             property "sonar.password", "admin"
         }
