1. 功能。 将systemProp.sonar.host.url 从property -> gradle.properties，可以生效

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,7 @@ localGradlePluginVersion=3.0.1
 # 置为true,则可直接运行 module_new、 module_girl 等 module
 isModule=false
 PROJECT_NAME = AndroidModulePattern
+
+systemProp.sonar.host.url=172.17.0.4:91000
+systemProp.sonar.login=username
+systemProp.sonar.password=password
