--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,6 @@ localGradlePluginVersion=3.0.1
 isModule=false
 PROJECT_NAME = AndroidModulePattern
 
-systemProp.sonar.host.url=172.17.0.4
+systemProp.sonar.host.url=sonar
 systemProp.sonar.login=username
 systemProp.sonar.password=password
