--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ plugins {
 }
 //[sonar]声明插件
 apply plugin: 'org.sonarqube'
+apply plugin: 'pmd'
 
 allprojects {
     addRepos(repositories)
@@ -67,3 +68,54 @@ subprojects{
         }
     }
 }
+
+// =============================
+// =========== pmd 分析
+// =============================
+
+//def configDir = "${project.rootDir}/config"
+//def reportDir = "${project.buildDir}/reports"
+//check.dependsOn 'pmd' // 将pmd 和 check任务关联起来，调用原来的check 就好调用我们的 pmd
+//task pmd(type:Pmd, dependsOn:"assembleDebug") {
+//    group = "pmd"
+//    ignoreFailures = false
+//    consoleOutput = true
+////    ruleSetFiles = files("$configDir/pmd/ali-pmd.xml")
+//    ruleSets = [
+//            'java-android','java-basic','java-braces',
+//            'java-clone','java-codesize',
+//            'java-comments',
+//            'java-controversial',
+//            'java-coupling',
+//            'java-design',
+//            'java-empty',
+//            'java-finalizers',
+//            'java-imports',
+//            'java-j2ee',
+//            'java-javabeans',
+//            'java-junit',
+//            'java-logging-jakarta-commons',
+//            'java-logging-java',
+//            'java-migrating',
+//            'java-naming',
+//            'java-optimizations',
+//            'java-strictexception','java-strings',
+//            'java-sunsecure','java-typeresolution',
+//            'java-unnecessary','java-unusedcode'
+//
+//    ]
+////    source 'src/main/java'
+//    source = fileTree('src')
+//    include '**/*.java'
+//    exclude '**/gen/**'
+//    reports {
+//        xml.enabled = true
+//        html.enabled = true
+//        xml {
+//            destination "$reportsDir/pmd/pmd.xml"
+//        }
+//        html {
+//            destination "$reportsDir/pmd/pmd.html"
+//        }
+//    }
+//}
