--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,6 @@ localGradlePluginVersion=3.0.1
 isModule=false
 PROJECT_NAME = AndroidModulePattern
 
-systemProp.sonar.host.url=http://192.168.0.110:9000
+systemProp.sonar.host.url=http://localhost:9000
 systemProp.sonar.login=admin
 systemProp.sonar.password=admin
