1. 功能。 sonar 具体ip -> 172.17.0.33

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,6 @@ localGradlePluginVersion=3.0.1
 isModule=false
 PROJECT_NAME = AndroidModulePattern
 
-systemProp.sonar.host.url=http://localhost:9000
+systemProp.sonar.host.url=http://172.17.0.33:9000
 systemProp.sonar.login=admin
 systemProp.sonar.password=admin
