--- a/versions.gradle
+++ b/versions.gradle
@@ -99,6 +99,7 @@ deps.toasty =  "com.github.GrenderG:Toasty:$versions.toasty"
 deps.logger = "com.orhanobut:logger:$versions.logger"
 deps.arouter_api = "com.alibaba:arouter-api:$versions.arouter_api"
 deps.arouter_compiler = "com.alibaba:arouter-compiler:$versions.arouter_compiler"
+deps.p3c = "1.3.0"
 
 ext.deps = deps
 
@@ -122,4 +123,6 @@ def addRepos(RepositoryHandler handler) {
     handler.maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
 }
 
+
 ext.addRepos = this.&addRepos
+
