--- a/module_app/build.gradle
+++ b/module_app/build.gradle
@@ -100,17 +100,9 @@ dependencies {
         implementation project(':module_card_girl')
     }
 
-    pmd "com.alibaba.p3c:p3c-pmd:${p3c}"
+//    pmd "com.alibaba.p3c:p3c-pmd:1.0.0"
+    pmd files('libs/p3c-pmd-2.0.1.jar')
 }
-
-//mypmd {
-//    consoleOutput = true
-//    reportsDir = file("build/reports/pmd")
-//
-//    ruleSets = [
-//            "java-ali-comment"
-//    ]
-//}
 
 // =============================
 // =========== 打包
@@ -178,60 +170,17 @@ task pmd(type: Pmd) {
     source = fileTree('src/main/java')
 //    ruleSetFiles = files("${project.rootDir}/config/pmd/PmdRuleSets.xml")
     ruleSets = [
-            'java-ali-comment',
-            'java-ali-concurrent',
-            'java-ali-constant',
-            'java-ali-exception',
-            'java-ali-flowcontrol',
-            'java-ali-naming',
-            'java-ali-oop',
-            'java-ali-orm',
-            'java-ali-other',
-            'java-ali-set',
-            'java-android','java-basic','java-braces',
-            'java-clone','java-codesize',
-            'java-comments',
-            'java-controversial',
-            'java-coupling',
-            'java-design',
-            'java-empty',
-            'java-finalizers',
-            'java-imports',
-            'java-j2ee',
-            'java-javabeans',
-            'java-junit',
-            'java-logging-jakarta-commons',
-            'java-logging-java',
-            'java-migrating',
-            'java-naming',
-            'java-optimizations',
-            'java-strictexception','java-strings',
-            'java-sunsecure','java-typeresolution',
-            'java-unnecessary','java-unusedcode'
-
-    ]
-//    ruleSets = ["java-android"]
-    reports {
-        xml.enabled = true
-        html.enabled = true
-        xml {
-            destination "${project.buildDir}/reports/pmd/pmd.xml"
-        }
-        html {
-            destination "${project.buildDir}/reports/pmd/pmd.html"
-        }
-    }
-}
-
-//def configDir = "${project.rootDir}/config"
-//def reportDir = "${project.buildDir}/reports"
-//check.dependsOn 'pmd' // 将pmd 和 check任务关联起来，调用原来的check 就好调用我们的 pmd
-//task pmd(type:Pmd, dependsOn:"assembleDebug") {
-//    group = "pmd"
-//    ignoreFailures = false
-//    consoleOutput = true
-////    ruleSetFiles = files("$configDir/pmd/ali-pmd.xml")
-//    ruleSets = [
+            'java-hc_demo'
+//            'java-ali-comment',
+//            'java-ali-concurrent',
+//            'java-ali-constant',
+//            'java-ali-exception',
+//            'java-ali-flowcontrol',
+//            'java-ali-naming',
+//            'java-ali-oop',
+//            'java-ali-orm',
+//            'java-ali-other',
+//            'java-ali-set',
 //            'java-android','java-basic','java-braces',
 //            'java-clone','java-codesize',
 //            'java-comments',
@@ -252,23 +201,22 @@ task pmd(type: Pmd) {
 //            'java-strictexception','java-strings',
 //            'java-sunsecure','java-typeresolution',
 //            'java-unnecessary','java-unusedcode'
-//
-//    ]
-////    source 'src/main/java'
-//    source = fileTree('src')
+
+    ]
 //    include '**/*.java'
 //    exclude '**/gen/**'
-//    reports {
-//        xml.enabled = true
-//        html.enabled = true
-//        xml {
-//            destination "$reportsDir/pmd/pmd.xml"
-//        }
-//        html {
-//            destination "$reportsDir/pmd/pmd.html"
-//        }
-//    }
-//}
+    reports {
+        xml.enabled = true
+        html.enabled = true
+        xml {
+            destination "${project.buildDir}/reports/pmd/pmd.xml"
+        }
+        html {
+            destination "${project.buildDir}/reports/pmd/pmd.html"
+        }
+    }
+}
+
 
 // =============================
 // =========== Jacoco 代码覆盖率 分析
