--- a/module_card_girl/build.gradle
+++ b/module_card_girl/build.gradle
@@ -52,16 +52,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     annotationProcessor deps.arouter_compiler
     implementation project(':lib_common')
     // addition
-//    compile 'com.jakewharton:butterknife:8.8.1'
+    //    compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.makeramen:roundedimageview:2.2.1'
-//    compile 'com.android.support:cardview-v7:23.2.1'
-
+    //    compile 'com.android.support:cardview-v7:23.2.1'
     implementation 'com.github.zhuchen1109:Swipe-cards:18df0b545b'
-    pmd "com.alibaba.p3c:p3c-pmd:$deps.p3c"
+//    pmd "com.alibaba.p3c:p3c-pmd:$deps.p3c"
+    pmd files('libs/p3c-pmd-2.0.1.jar')
 }
 
 // =============================
@@ -73,39 +73,39 @@ task pmd(type: Pmd) {
     source = fileTree('src/main/java')
 //    ruleSetFiles = files("${project.rootDir}/config/pmd/PmdRuleSets.xml")
     ruleSets = [
-            'java-ali-comment',
-            'java-ali-concurrent',
-            'java-ali-constant',
-            'java-ali-exception',
-            'java-ali-flowcontrol',
-            'java-ali-naming',
-            'java-ali-oop',
-            'java-ali-orm',
-            'java-ali-other',
-            'java-ali-set',
-            'java-android','java-basic','java-braces',
-            'java-clone','java-codesize',
-            'java-comments',
-            'java-controversial',
-            'java-coupling',
-            'java-design',
-            'java-empty',
-            'java-finalizers',
-            'java-imports',
-            'java-j2ee',
-            'java-javabeans',
-            'java-junit',
-            'java-logging-jakarta-commons',
-            'java-logging-java',
-            'java-migrating',
-            'java-naming',
-            'java-optimizations',
-            'java-strictexception','java-strings',
-            'java-sunsecure','java-typeresolution',
-            'java-unnecessary','java-unusedcode'
+            'java-hc_demo'
+//            'java-ali-comment',
+//            'java-ali-concurrent',
+//            'java-ali-constant',
+//            'java-ali-exception',
+//            'java-ali-flowcontrol',
+//            'java-ali-naming',
+//            'java-ali-oop',
+//            'java-ali-orm',
+//            'java-ali-other',
+//            'java-ali-set',
+//            'java-android','java-basic','java-braces',
+//            'java-clone','java-codesize',
+//            'java-comments',
+//            'java-controversial',
+//            'java-coupling',
+//            'java-design',
+//            'java-empty',
+//            'java-finalizers',
+//            'java-imports',
+//            'java-j2ee',
+//            'java-javabeans',
+//            'java-junit',
+//            'java-logging-jakarta-commons',
+//            'java-logging-java',
+//            'java-migrating',
+//            'java-naming',
+//            'java-optimizations',
+//            'java-strictexception','java-strings',
+//            'java-sunsecure','java-typeresolution',
+//            'java-unnecessary','java-unusedcode'
 
     ]
-//    ruleSets = ["java-android"]
     reports {
         xml.enabled = true
         html.enabled = true
