--- a/module_card_girl/build.gradle
+++ b/module_card_girl/build.gradle
@@ -3,7 +3,6 @@ if (isModule.toBoolean()) {
 } else {
     apply plugin: 'com.android.library'
 }
-apply plugin: 'pmd'
 
 android {
     compileSdkVersion build_versions.target_sdk
@@ -57,23 +56,23 @@ dependencies {
     implementation project(':lib_common')
     // addition
     //    compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.makeramen:roundedimageview:2.2.1'
+    implementation ('com.makeramen:roundedimageview:2.2.1')
     //    compile 'com.android.support:cardview-v7:23.2.1'
     implementation 'com.github.zhuchen1109:Swipe-cards:18df0b545b'
 //    pmd "com.alibaba.p3c:p3c-pmd:$deps.p3c"
-    pmd files('libs/p3c-pmd-2.0.1.jar')
 }
 
 // =============================
 // =========== pmd 分析
 // =============================
 
-task pmd(type: Pmd) {
-    ignoreFailures = true
-    source = fileTree('src/main/java')
-//    ruleSetFiles = files("${project.rootDir}/config/pmd/PmdRuleSets.xml")
-    ruleSets = [
-            'java-hc-demo'
+//task pmd(type: Pmd) {
+//    group = 'pmd'
+//    ignoreFailures = true
+//    source = fileTree('src/main/java')
+////    ruleSetFiles = files("${project.rootDir}/config/pmd/PmdRuleSets.xml")
+//    ruleSets = [
+//            'java-xh-comment'
 //            'java-ali-comment',
 //            'java-ali-concurrent',
 //            'java-ali-constant',
@@ -105,15 +104,15 @@ task pmd(type: Pmd) {
 //            'java-sunsecure','java-typeresolution',
 //            'java-unnecessary','java-unusedcode'
 
-    ]
-    reports {
-        xml.enabled = true
-        html.enabled = true
-        xml {
-            destination "${project.buildDir}/reports/pmd/pmd.xml"
-        }
-        html {
-            destination "${project.buildDir}/reports/pmd/pmd.html"
-        }
-    }
-}
+//    ]
+//    reports {
+//        xml.enabled = true
+//        html.enabled = true
+//        xml {
+//            destination "${project.buildDir}/reports/pmd/pmd.xml"
+//        }
+//        html {
+//            destination "${project.buildDir}/reports/pmd/pmd.html"
+//        }
+//    }
+//}
