--- a/module_app/build.gradle
+++ b/module_app/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.application'
-// add pmd
-apply plugin: 'pmd'
 //apply plugin: 'jacoco'
 
 
@@ -85,23 +83,17 @@ android {
 
 }
 
-ext {
-    p3c = "1.3.0"
-}
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation deps.support.multidex
     implementation project(':lib_common')
-
     if (!isModule.toBoolean()) {
         implementation project(':module_main')
         implementation project(':module_girls')
         implementation project(':module_news')
         implementation project(':module_card_girl')
     }
-
-//    pmd "com.alibaba.p3c:p3c-pmd:1.0.0"
-    pmd files('libs/p3c-pmd-2.0.1.jar')
+    //    pmd "com.alibaba.p3c:p3c-pmd:1.0.0"
 }
 
 // =============================
@@ -165,11 +157,12 @@ def copyToPath(file, path) {
 // =========== pmd 分析
 // =============================
 
-task pmd(type: Pmd) {
-    ignoreFailures = true
-    source = fileTree('src/main/java')
-//    ruleSetFiles = files("${project.rootDir}/config/pmd/PmdRuleSets.xml")
-    ruleSets = [
+//task pmd(type: Pmd) {
+//    group = 'pmd'
+//    ignoreFailures = true
+//    source = fileTree('src/main/java')
+////    ruleSetFiles = files("${project.rootDir}/config/pmd/PmdRuleSets.xml")
+//    ruleSets = [
             'java-hc-demo'
 //            'java-ali-comment',
 //            'java-ali-concurrent',
@@ -202,20 +195,20 @@ task pmd(type: Pmd) {
 //            'java-sunsecure','java-typeresolution',
 //            'java-unnecessary','java-unusedcode'
 
-    ]
+//    ]
 //    include '**/*.java'
 //    exclude '**/gen/**'
-    reports {
-        xml.enabled = true
-        html.enabled = true
-        xml {
-            destination "${project.buildDir}/reports/pmd/pmd.xml"
-        }
-        html {
-            destination "${project.buildDir}/reports/pmd/pmd.html"
-        }
-    }
-}
+//    reports {
+//        xml.enabled = true
+//        html.enabled = true
+//        xml {
+//            destination "${project.buildDir}/reports/pmd/pmd.xml"
+//        }
+//        html {
+//            destination "${project.buildDir}/reports/pmd/pmd.html"
+//        }
+//    }
+//}
 
 
 // =============================
