--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,5 @@ PROJECT_NAME = AndroidModulePattern
 systemProp.sonar.host.url=http://172.17.0.33:9000
 systemProp.sonar.login=admin
 systemProp.sonar.password=admin
+
+IS_JENKINS=false
