--- a/module_app/build.gradle
+++ b/module_app/build.gradle
@@ -26,11 +26,11 @@ android {
         }
     }
 
-    compileSdkVersion build_versions.target_sdk
+    compileSdkVersion 23
     defaultConfig {
         applicationId "com.guiying.module"
         minSdkVersion build_versions.min_sdk
-        targetSdkVersion build_versions.target_sdk
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
